# server/model/designer.ts
@@ -1,0 +1,67 @@
+/**
+ * Api Definitions
+ * Only for Api
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+
+export class Designer {
+    'id'?: string;
+    'name': string;
+    'email': string;
+    'descriptionHeading': string;
+    'description': string;
+    'file': string;
+    'baseColor': string;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "id",
+            "baseName": "_id",
+            "type": "string"
+        },
+        {
+            "name": "name",
+            "baseName": "name",
+            "type": "string"
+        },
+        {
+            "name": "email",
+            "baseName": "email",
+            "type": "string"
+        },
+        {
+            "name": "descriptionHeading",
+            "baseName": "descriptionHeading",
+            "type": "string"
+        },
+        {
+            "name": "description",
+            "baseName": "description",
+            "type": "string"
+        },
+        {
+            "name": "file",
+            "baseName": "file",
+            "type": "string"
+        },
+        {
+            "name": "baseColor",
+            "baseName": "baseColor",
+            "type": "string"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return Designer.attributeTypeMap;
+    }
+}
+
