# server/model/inlineResponse2001.ts
@@ -1,0 +1,32 @@
+/**
+ * Api Definitions
+ * Only for Api
+ *
+ * The version of the OpenAPI document: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { RequestFile } from './models';
+import { Designer } from './designer';
+
+export class InlineResponse2001 {
+    'designer': Designer;
+
+    static discriminator: string | undefined = undefined;
+
+    static attributeTypeMap: Array<{name: string, baseName: string, type: string}> = [
+        {
+            "name": "designer",
+            "baseName": "designer",
+            "type": "Designer"
+        }    ];
+
+    static getAttributeTypeMap() {
+        return InlineResponse2001.attributeTypeMap;
+    }
+}
+
